--- a/Avalonia.Tiels/Controls/SidebarButton.axaml
+++ b/Avalonia.Tiels/Controls/SidebarButton.axaml
@@ -5,7 +5,7 @@
              xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.SidebarButton">
-    <Button VerticalAlignment="Top" HorizontalAlignment="Stretch" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+    <ToggleButton VerticalAlignment="Top" HorizontalAlignment="Stretch" DataContext="{Binding RelativeSource={RelativeSource Self}}" x:Name="Top">
         <Button.Background><SolidColorBrush Color="#00000000"></SolidColorBrush></Button.Background>
         <Button.Styles>
             <Style Selector=":disabled /template/ ContentPresenter">
@@ -18,5 +18,5 @@
                        Text="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
             <TextBlock Margin="20,0" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
         </Grid>
-    </Button>
+    </ToggleButton>
 </UserControl>
