--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -2,12 +2,42 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:colorpicker="clr-namespace:AvaloniaColorPicker;assembly=AvaloniaColorPicker"
              xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Create.TilePage">
-    <StackPanel>
+    <StackPanel Margin="10">
         <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.CreateLabel}"/>
-        <TextBox/>
-        <Button/>
+        <Label>Name</Label>
+        <TextBox Watermark="The name of your new tile..."/>
+        <Label Margin="0,10,0,0">Type</Label>
+        <ComboBox HorizontalAlignment="Stretch">
+            <ComboBox.Items>
+                <ComboBoxItem>Quick Tile</ComboBoxItem>
+                <ComboBoxItem>Directory Portal</ComboBoxItem>
+                <ComboBoxItem IsEnabled="False">Floating Image</ComboBoxItem>
+                <ComboBoxItem IsEnabled="False">Note</ComboBoxItem>
+            </ComboBox.Items>
+        </ComboBox>
+        <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="Use global theme" IsChecked="True"/>
+        <Grid x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1">
+                <Label>Transparency Mode</Label>
+                <ComboBox x:Name="TransparencyModeBox" HorizontalAlignment="Stretch"/>
+            </StackPanel>
+
+            <StackPanel Grid.Column="0">
+                <Label>Color</Label>
+                <colorpicker:ColorButton Color="#88000000" Margin="0,3,10,0"/>
+            </StackPanel>
+        </Grid>
+        <Label FontStyle="Italic" Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False">Caution! Using other options than Solid or Transparent won't work on some systems and will fallback to these options.</Label>
+        <Label FontStyle="Italic" Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False">This option only works on Windows 11.</Label>
+        <Label FontStyle="Italic" Foreground="#666666" Margin="0,5,0,0">Transparency level can be changed in color option.</Label>
+        <Button Margin="0,10,0,0" Content="{x:Static p:Resources.CreateButton}"/>
     </StackPanel>
 </UserControl>
