--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -35,8 +35,8 @@
             </Grid>
         </StackPanel>
         <TextBlock Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False" x:Name="WarnUnsupportedOptionText" TextWrapping="Wrap">Caution! Using other options than Solid or Transparent won't work on some systems and will fallback to these options.</TextBlock>
-        <TextBlock Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False" x:Name="NewestWinOnlyText" TextWrapping="Wrap">This option only works on Windows 11.</TextBlock>
+        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="NewestWinOnlyText" TextWrapping="Wrap">This option only works on Windows 11. Caution! This option doesn't support most animated desktop software.</TextBlock>
         <TextBlock FontStyle="Italic" Foreground="#666666" Margin="0,5,0,0">Transparency level can be changed in color option.</TextBlock>
-        <Button Margin="0,10,0,0" Content="{x:Static p:Resources.CreateButton}"/>
+        <Button Margin="0,10,0,0" Content="{x:Static p:Resources.CreateButton}" Click="CreateButton"/>
     </StackPanel>
 </UserControl>
