Add color selection in Appearance Page

--- a/Avalonia.Tiels/Pages/Settings/AppearancePage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/AppearancePage.axaml
@@ -3,29 +3,23 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:avaloniaColorPicker="clr-namespace:AvaloniaColorPicker;assembly=AvaloniaColorPicker"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="900" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Settings.AppearancePage">
-    <Grid>
-        <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
-            <StackPanel>
-                <Label>Theme Mode</Label>
-                <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
-            </StackPanel>
-            <Grid Margin="0,5,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0">
-                    <Label>Color</Label>
-                    <avaloniaColorPicker:ColorPicker Color="#88000000" IsPaletteVisible="False" Margin="0,3,10,0"/>
-                </StackPanel>
-            
-                <StackPanel Grid.Column="1">
-                    <Label>Transparency Mode</Label>
-                    <ComboBox x:Name="TransparencyModeBox" HorizontalAlignment="Stretch"/>
-                </StackPanel>
-            </Grid>
+    <Grid Margin="10">
+        <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0">
+            <Label>Theme Mode</Label>
+            <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
+            <Label>Transparency Mode</Label>
+            <ComboBox x:Name="TransparencyModeBox" HorizontalAlignment="Stretch"/>
+            <Label>Color</Label>
+            <avaloniaColorPicker:ColorPicker x:Name="ColorWheel" Color="#88000000" PropertyChanged="ColorWheelSizeChanged"
+                                             IsPaletteVisible="False"
+                                             IsCIELABVisible="False"
+                                             IsColourBlindnessSelectorVisible="False"
+                                             IsColourSpacePreviewVisible="True"
+                                             IsColourSpaceSelectorVisible="False"
+                                             IsHSBVisible="True" IsAlphaVisible="True" IsHexVisible="True" IsRGBVisible="True" Margin="0,3,10,0"/>
         </StackPanel>
+        
     </Grid>
 </UserControl>
