--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -8,14 +8,16 @@
              x:Class="Avalonia.Tiels.Pages.Create.TilePage">
     <StackPanel Margin="10">
         <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.CreateLabel}"/>
-        <Label>Name</Label>
-        <TextBox Watermark="The name of your new tile..."/>
-        <Label Margin="0,10,0,0">Type</Label>
+        <Label Content="{x:Static p:Resources.Name}"/>
+        <TextBox Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
+        <Label Margin="0,10,0,0" Content="{x:Static p:Resources.Type}"/>
         <ComboBox x:Name="TileTypeBox" HorizontalAlignment="Stretch"/>
-        <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="Use global theme" IsChecked="True"/>
+        <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
         <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
             <StackPanel>
-                <Label>Theme Mode</Label>
+                <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="codicon" Content="" Padding="2,5,0,0"><ToolTip.Tip>
+                    <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
+                </ToolTip.Tip></Label></WrapPanel>
                 <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
             </StackPanel>
             <Grid Margin="0,5,0,0">
@@ -24,19 +26,20 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0">
-                    <Label>Color</Label>
+                    <Label Content="{x:Static p:Resources.Color}"/>
                     <colorpicker:ColorButton Color="#88000000" Margin="0,3,10,0"/>
                 </StackPanel>
             
                 <StackPanel Grid.Column="1">
-                    <Label>Transparency Mode</Label>
+                    <Label Content="{x:Static p:Resources.TransparencyMode}"/>
                     <ComboBox x:Name="TransparencyModeBox" HorizontalAlignment="Stretch"/>
                 </StackPanel>
             </Grid>
         </StackPanel>
-        <TextBlock Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False" x:Name="WarnUnsupportedOptionText" TextWrapping="Wrap">Caution! Using other options than Solid or Transparent won't work on some systems and will fallback to these options.</TextBlock>
-        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="NewestWinOnlyText" TextWrapping="Wrap">This option only works on Windows 11. Caution! This option doesn't support most animated desktop software.</TextBlock>
-        <TextBlock FontStyle="Italic" Foreground="#666666" Margin="0,5,0,0">Transparency level can be changed in color option.</TextBlock>
+        <TextBlock Foreground="#FF9500" Margin="0,5,0,0" IsVisible="False" x:Name="WarnUnsupportedOptionText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnPossiblyUnsupported}"/>
+        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="NewestWinOnlyText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnNewerSysReq}"/>
+        <TextBlock Foreground="#FF0000" Margin="0,5,0,0" IsVisible="False" x:Name="WarnOtherProgramsText" TextWrapping="Wrap" Text="{x:Static p:Resources.WarnOtherPrograms}"/>
+        <TextBlock FontStyle="Italic" Foreground="#666666" Margin="0,5,0,0" Text="{x:Static p:Resources.TransparencyChangedInColor}"/>
         <Button Margin="0,10,0,0" Content="{x:Static p:Resources.CreateButton}" Click="CreateButton"/>
     </StackPanel>
 </UserControl>
