--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -4,11 +4,35 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
-        TransparencyLevelHint="AcrylicBlur"
+        TransparencyLevelHint="Transparent"
         SystemDecorations="None"
         Title="TileWindow" Opened="OnLoad" Background="{x:Null}">
+    <Window.Styles>
+        <Style Selector="Button.EditBar">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="Template"></Setter>
+        </Style>
+    </Window.Styles>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="28"></RowDefinition>
+        </Grid.RowDefinitions>
         <Grid.Background><SolidColorBrush Color="#55000000"/></Grid.Background>
-        <Grid x:Name="EditBar"></Grid>
+        <Grid Grid.Row="1" x:Name="EditBar">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="28"></ColumnDefinition>
+                <ColumnDefinition Width="28"></ColumnDefinition>
+                <ColumnDefinition Width="28"></ColumnDefinition>
+                <ColumnDefinition Width="28"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" x:Name="HideBtn" Classes="EditBar"></Button>
+            <Button Grid.Column="1" x:Name="OpenDirBtn" Classes="EditBar"></Button>
+            <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar"></Button>
+            <Button Grid.Column="3" x:Name="RenameBtn" Classes="EditBar"></Button>
+            <TextBlock Grid.Column="4" x:Name="TileName">Name</TextBlock>
+        </Grid>
     </Grid>
 </Window>
