--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -20,6 +20,7 @@
             <RowDefinition Height="28"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.Background><SolidColorBrush Color="#55000000"/></Grid.Background>
+        <Grid x:Name="EntryContent"/>
         <Grid Grid.Row="1" x:Name="EditBar">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="28"></ColumnDefinition>
