--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -12,10 +12,10 @@
         <TextBox x:Name="NameBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
         <Label Margin="0,10,0,0" Content="{x:Static p:Resources.Type}"/>
         <ComboBox x:Name="TileTypeBox" HorizontalAlignment="Stretch"/>
-        <Grid x:Name="TilePathGrid">
-            <Label Content="{x:Static p:Resources.TilePath}" Margin="0,10,0,0"/>
+        <StackPanel x:Name="TilePathPanel" Margin="0,10,0,0">
+            <Label Content="{x:Static p:Resources.TilePath}"/>
             <TextBox x:Name="PathBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
-        </Grid>
+        </StackPanel>
         <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
         <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
             <StackPanel>
