--- a/Avalonia.Tiels/Controls/SidebarButton.axaml
+++ b/Avalonia.Tiels/Controls/SidebarButton.axaml
@@ -13,9 +13,7 @@
             </Style>
         </Button.Styles>
         <Grid>
-            <TextBlock FontFamily="{Binding Font, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"
-                       VerticalAlignment="Bottom"
-                       Text="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
+            <Image Width="16" Height="16" HorizontalAlignment="Left" x:Name="SvgIcon"/>
             <TextBlock Margin="20,0" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
         </Grid>
     </ToggleButton>
