--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -19,9 +19,9 @@
         <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
         <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
             <StackPanel>
-                <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="codicon" Content="" Padding="2,5,0,0"><ToolTip.Tip>
+                <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Image x:Name="ThemeInfoIcon" Width="16" Height="16"/><ToolTip.Tip>
                     <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
-                </ToolTip.Tip></Label></WrapPanel>
+                </ToolTip.Tip></WrapPanel>
                 <ComboBox x:Name="ThemeBox" HorizontalAlignment="Stretch"/>
             </StackPanel>
             <Grid Margin="0,5,0,0">
