--- a/Avalonia.Tiels/Controls/EntryComponent.axaml
+++ b/Avalonia.Tiels/Controls/EntryComponent.axaml
@@ -2,7 +2,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.EntryComponent">
-    Welcome to Avalonia!
+    <Grid DataContext="{Binding RelativeSource={RelativeSource Self}}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/> <!-- Preview (Thumbnail) -->
+            <RowDefinition Height="10"/> <!-- Name of entry -->
+        </Grid.RowDefinitions>
+        <Image Source="{Binding Preview, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
+        <TextBlock Grid.Row="1" Text="{Binding EntryName, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
+    </Grid>
 </UserControl>
