--- a/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
+++ b/Avalonia.Tiels/Pages/Settings/GeneralPage.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:p="clr-namespace:Avalonia.Tiels.Resources"
+             xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Settings.GeneralPage">
                             <Grid>
@@ -33,7 +34,7 @@
                                         <Button x:Name="ApplyButton" Margin="5,0,0,0" Click="ApplyButtonClicked" Content="{x:Static p:Resources.Apply}"/>
                                 </WrapPanel>
                                 <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15">
-                                        <TextBlock x:Name="StatusIcon" FontFamily="codicon" Padding="0,0,5,0"></TextBlock>
+                                        <controls:Icon x:Name="StatusIcon" Padding="0,0,5,0"/>
                                         <TextBlock x:Name="StatusText" Text="{x:Static p:Resources.NoChanges}"/>
                                 </WrapPanel>
                         </Grid>
