--- a/Avalonia.Tiels/Controls/SidebarButton.axaml
+++ b/Avalonia.Tiels/Controls/SidebarButton.axaml
@@ -13,7 +13,7 @@
             </Style>
         </Button.Styles>
         <Grid>
-            <TextBlock FontFamily="/Assets/lucidelite.ttf"
+            <TextBlock FontFamily="avares://Avalonia.Tiels/Assets#lucidelite"
                        VerticalAlignment="Bottom"
                        Text="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
             <TextBlock Margin="20,0" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}"/>
