--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -17,6 +17,11 @@
             <Label Content="{x:Static p:Resources.TilePath}"/>
             <TextBox x:Name="PathBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
         </StackPanel>
+        <Label Content="{x:Static p:Resources.Size}"/>
+        <WrapPanel x:Name="TileSizePanel" Margin="0,10,0,0">
+            <TextBox x:Name="SizeXBox" Watermark="250"/>
+            <TextBox x:Name="SizeYBox" Watermark="100"/>
+        </WrapPanel>
         <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
         <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
             <StackPanel>
