--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -33,7 +33,7 @@
             <Button Grid.Column="1" x:Name="OpenDirBtn" Classes="EditBar"></Button>
             <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar"></Button>
             <Button Grid.Column="3" x:Name="RenameBtn" Classes="EditBar"></Button>
-            <TextBlock Grid.Column="4" x:Name="TileName">Name</TextBlock>
+            <TextBlock Grid.Column="4" x:Name="TileName">{Name}</TextBlock>
         </Grid>
     </Grid>
 </Window>
