--- a/Avalonia.Tiels/Controls/SidebarButton.axaml
+++ b/Avalonia.Tiels/Controls/SidebarButton.axaml
@@ -5,7 +5,9 @@
              xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.SidebarButton">
-    <ToggleButton VerticalAlignment="Top" HorizontalAlignment="Stretch" DataContext="{Binding RelativeSource={RelativeSource Self}}" x:Name="Top">
+    <ToggleButton VerticalAlignment="Top" HorizontalAlignment="Stretch"
+                  DataContext="{Binding RelativeSource={RelativeSource Self}}" x:Name="Top"
+                  IsChecked="{Binding IsToggled, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarButton}}}">
         <Button.Background><SolidColorBrush Color="#00000000"></SolidColorBrush></Button.Background>
         <Button.Styles>
             <Style Selector=":disabled /template/ ContentPresenter">
